# Deep-Research-Agent

./: README.md
backend/: .env.example  .gitignore  README.md  create_index.py  main.py  pyproject.toml
backend/app/core/: config.py  database.py  errors.py  llm_config.py  logging.py
backend/app/research_agent/: graph.py  models.py  state.py
backend/app/research_agent/nodes/: critic.py  planner.py  researcher.py  summarizer.py  writer.py
backend/app/routers/: health.py  history.py  research.py
backend/app/schemas/: events.py  followup.py  history.py  research.py
backend/app/services/: followup_service.py  history_service.py  rag_service.py  research_service.py
backend/deep_research_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/postman/: Open_Deep_Research_Agent_Backend.postman_collection.json
backend/qdrant/: docker-compose.yml
backend/tests/: conftest.py
backend/tests/integration/: test_api_contract.py  test_api_failure_path.py  test_api_happy_path.py  test_jobs_api.py
backend/tests/unit/: test_depth_profiles.py  test_graph_longform.py  test_polish_guard.py
documentation/: PRD.md  implementation_plan_v1.md  technical_specification.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ConfirmModal.tsx  ProgressRail.tsx  ReportViewer.tsx  ResearchForm.tsx  Sidebar.tsx  SupplementPanel.tsx  SystemOverviewModal.tsx  ToneBadge.tsx  research-workspace.tsx  theme-script.tsx  workspace-context.tsx
frontend/src/lib/: api.ts  backend.ts  format.ts  types.ts
(+2 files in other folders)
